Complete backend & frontend integration overhaul (API Gateway, Lambda, Forms, DB)

--- a/Judicial Solutions/legal-documentation.html
+++ b/Judicial Solutions/legal-documentation.html
@@ -89,7 +89,7 @@
     <form id="legalContactForm">
       <input type="text" id="name" placeholder="Your Name" required>
       <div class="phone-group">
-        <select id="countryCode">
+        <select id="countryCode" name="country-code">
           <option value="+91">+91</option>
           <option value="+1">+1</option>
           <option value="+44">+44</option>
