--- a/Judicial Solutions/civil-cases.html
+++ b/Judicial Solutions/civil-cases.html
@@ -86,7 +86,7 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="contact">
+  <!-- <section id="contact" class="contact">
     <h2>Contact Us</h2>
     <form id="civilContactForm">
       <input type="hidden" name="form_id" value="civil-cases">
@@ -103,7 +103,52 @@
       <textarea placeholder="Your Message" rows="4"></textarea>
       <button type="submit" class="btn">Send Message</button>
     </form>
-  </section>
+  </section> -->
+  <section id="contact" class="contact">
+  <h2>Contact Us</h2>
+
+  <form id="civilContactForm">
+      <input type="hidden" name="form_id" value="civil-cases">
+
+      <input
+        type="text"
+        name="name"
+        placeholder="Your Name"
+        required
+      >
+
+      <div class="phone-group">
+        <select name="country-code">
+          <option value="+91">+91</option>
+          <option value="+1">+1</option>
+          <option value="+44">+44</option>
+        </select>
+
+        <input
+          type="tel"
+          name="phone"
+          placeholder="Phone Number"
+          required
+        >
+      </div>
+
+      <input
+        type="email"
+        name="email"
+        placeholder="Email (e.g. yourname@gmail.com)"
+        required
+      >
+
+      <textarea
+        name="message"
+        placeholder="Your Message"
+        rows="4"
+      ></textarea>
+
+      <button type="submit" class="btn">Send Message</button>
+  </form>
+</section>
+
 
   <!-- Footer -->
   <footer class="footer">
