--- a/Judicial Solutions/criminal-defense.html
+++ b/Judicial Solutions/criminal-defense.html
@@ -87,7 +87,7 @@
       <input type="hidden" name="form_id" value="criminal-defense">
       <input type="text" id="name" placeholder="Your Name" required>
       <div class="phone-group">
-        <select id="countryCode">
+        <select id="countryCode" name="country-code">
           <option value="+91">+91</option>
           <option value="+1">+1</option>
           <option value="+44">+44</option>
