--- a/Judicial Solutions/admin-dashboard.html
+++ b/Judicial Solutions/admin-dashboard.html
@@ -493,7 +493,8 @@
                             <p class="text-muted mb-0">Control which services appear on the public website.</p>
                         </div>
                         <div class="col-md-6 text-md-end mt-2 mt-md-0">
-                            <button class="btn btn-primary btn-sm">
+                            <!-- <button class="btn btn-primary btn-sm"> -->
+                            <button class="btn btn-primary btn-sm" id="addServiceBtn">
                                 <i class="bi bi-plus-lg me-1"></i>Add service
                             </button>
                         </div>
@@ -518,6 +519,49 @@
                         </div>
                     </div>
                 </section>
+
+                <!-- Service Modal -->
+                <div class="modal fade" id="serviceModal" tabindex="-1" aria-labelledby="serviceModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="serviceModalLabel">Add Service</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <form id="service-form">
+                        <div class="modal-body">
+                        <div class="mb-2">
+                            <label for="service-name" class="form-label small mb-1">Service name</label>
+                            <input type="text" id="service-name" class="form-control form-control-sm" required />
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="service-category" class="form-label small mb-1">Category</label>
+                            <input type="text" id="service-category" class="form-control form-control-sm"
+                            placeholder="e.g. Civil, Criminal, Family, Corporate" />
+                        </div>
+
+                        <div class="mb-2">
+                            <label for="service-description" class="form-label small mb-1">Description (optional)</label>
+                            <textarea id="service-description" class="form-control form-control-sm" rows="3"></textarea>
+                        </div>
+
+                        <div class="form-check form-switch mb-2">
+                            <input class="form-check-input" type="checkbox" id="service-shown" checked />
+                            <label class="form-check-label small" for="service-shown">
+                            Show this service on the public website
+                            </label>
+                        </div>
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-sm">Save service</button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                </div>
+
 
                 <!-- ============ Case Research Section ============ -->
                 <section id="case-research-section" class="admin-section d-none">
