--- a/Judicial Solutions/admin-dashboard.html
+++ b/Judicial Solutions/admin-dashboard.html
@@ -519,6 +519,99 @@
                         </div>
                     </div>
                 </section>
+                
+                <!--=========== Files & Templates ============== -->
+                <section id="files-section" class="card">
+                <div class="card-header">
+                    <h2>Files & Templates</h2>
+                    <button id="addFileBtn" class="btn btn-primary btn-sm">
+                    + Add file / template
+                    </button>
+                </div>
+
+                <table class="admin-table">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Type</th>
+                        <th>Category</th>
+                        <th>Status</th>
+                        <th>Link</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="files-table-body">
+                    <!-- JS -->
+                    </tbody>
+                </table>
+                </section>
+
+                <!-- Files & Templates Modal -->
+                <div class="modal fade" id="fileModal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="fileModalLabel">Add File / Template</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <form id="file-form">
+                        <div class="modal-body">
+                        <div class="mb-3">
+                            <label class="form-label">Title</label>
+                            <input type="text" id="file-title" class="form-control" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Type</label>
+                            <select id="file-type" class="form-select" required>
+                            <option value="template">Template</option>
+                            <option value="form">Form</option>
+                            <option value="misc">Misc</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Category</label>
+                            <input type="text" id="file-category" class="form-control" placeholder="Civil / Criminal / Family / Corporate" />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">File URL</label>
+                            <input type="url" id="file-url" class="form-control" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Status</label>
+                            <select id="file-status" class="form-select">
+                            <option value="active">Active</option>
+                            <option value="archived">Archived</option>
+                            </select>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Description</label>
+                            <textarea id="file-description" class="form-control" rows="2"></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Tags (comma separated)</label>
+                            <input type="text" id="file-tags" class="form-control" placeholder="divorce, petition" />
+                        </div>
+                        </div>
+
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                            Cancel
+                        </button>
+                        <button type="submit" class="btn btn-primary">
+                            Save
+                        </button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                </div>
 
                 <!-- Service Modal -->
                 <div class="modal fade" id="serviceModal" tabindex="-1" aria-labelledby="serviceModalLabel" aria-hidden="true">
