--- a/Judicial Solutions/admin-dashboard.html
+++ b/Judicial Solutions/admin-dashboard.html
@@ -692,6 +692,88 @@
                 </div>
                 </div>
 
+                 <!--=========== Post & Blogs ============== -->
+                <section id="posts-section" class="card">
+                <div class="card-header d-flex justify-content-between align-items-center">
+                    <h2>Blog / Updates</h2>
+                    <button id="addPostBtn" class="btn btn-primary btn-sm">+ New post</button>
+                </div>
+
+                <table class="admin-table">
+                    <thead>
+                    <tr>
+                        <th>Title</th>
+                        <th>Category</th>
+                        <th>Status</th>
+                        <th>Published</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody id="posts-table-body">
+                    <!-- filled by JS -->
+                    </tbody>
+                </table>
+                </section>
+
+                <!-- Post & Blogs Modal -->
+                <div class="modal fade" id="postModal" tabindex="-1" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="postModalLabel">New Post</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    </div>
+
+                    <form id="post-form">
+                        <div class="modal-body">
+                        <div class="mb-3">
+                            <label class="form-label">Title</label>
+                            <input type="text" id="post-title" class="form-control" required />
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Slug (optional)</label>
+                            <input type="text" id="post-slug" class="form-control" placeholder="e.g. mutual-consent-divorce-guide" />
+                        </div>
+
+                        <div class="mb-3 d-flex gap-2">
+                            <div class="flex-fill">
+                            <label class="form-label">Category</label>
+                            <input type="text" id="post-category" class="form-control" placeholder="Family / Civil / Criminal" />
+                            </div>
+                            <div>
+                            <label class="form-label">Status</label>
+                            <select id="post-status" class="form-select">
+                                <option value="draft">Draft</option>
+                                <option value="published">Published</option>
+                            </select>
+                            </div>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Excerpt (short summary)</label>
+                            <textarea id="post-excerpt" class="form-control" rows="2"></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Content</label>
+                            <textarea id="post-content" class="form-control" rows="6"></textarea>
+                        </div>
+
+                        <div class="mb-3">
+                            <label class="form-label">Tags (comma separated)</label>
+                            <input type="text" id="post-tags" class="form-control" placeholder="divorce, property, procedure" />
+                        </div>
+                        </div>
+
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </form>
+                    </div>
+                </div>
+                </div>
 
                 <!-- ============ Case Research Section ============ -->
                 <section id="case-research-section" class="admin-section d-none">
