--- a/Judicial Solutions/admin-login.html
+++ b/Judicial Solutions/admin-login.html
@@ -28,68 +28,64 @@
   <section class="admin-container">
     <div class="admin-card">
       <!-- Left: Login Form -->
-      <div class="login-section">
-        <h2>Admin Login</h2>
+      <section class="admin-container">
+        <div class="admin-card">
 
-        <!-- ✅ Single form, with correct IDs for JS -->
-        <form id="admin-login-form">
-          <div class="input-group">
-            <input type="email" id="admin-email" placeholder="Ener login email" required>
+          <!-- Left: Cognito Login Button -->
+          <div class="login-section">
+            <h2>Admin Login</h2>
+
+            <p class="text-muted" style="margin-bottom: 20px;">
+              Secure access via Amazon Cognito.
+            </p>
+
+            <!-- 🔥 Replaced hardcoded form with Cognito Login -->
+            <button type="button" id="cognitoLoginBtn" class="login-btn" onclick="redirectToCognitoLogin()">
+              Login with Admin Account
+            </button>
+            
+            <p class="signup-text" style="margin-top: 15px;">
+              Don’t have access? <a href="#">Request Access</a>
+            </p>
           </div>
 
-          <div class="input-group">
-            <input type="password" id="admin-password" placeholder="Enter your password" required>
+          <!-- Right: Tic Tac Toe Game -->
+          <div class="game-section">
+            <h3>Tic Tac Toe</h3>
+            <div class="game-mode">
+              <label>
+                <input type="radio" name="mode" value="single" checked> Single Player
+              </label>
+              <label>
+                <input type="radio" name="mode" value="double"> Two Players
+              </label>
+            </div>
+            <div class="board" id="ticTacToeBoard">
+              <div class="cell" data-index="0"></div>
+              <div class="cell" data-index="1"></div>
+              <div class="cell" data-index="2"></div>
+              <div class="cell" data-index="3"></div>
+              <div class="cell" data-index="4"></div>
+              <div class="cell" data-index="5"></div>
+              <div class="cell" data-index="6"></div>
+              <div class="cell" data-index="7"></div>
+              <div class="cell" data-index="8"></div>
+            </div>
+            <p class="game-status" id="gameStatus"></p>
+            <button id="resetGame" class="reset-btn">Reset Game</button>
           </div>
-
-          <a href="#" class="forgot-link">Forgot password?</a>
-
-          <button type="submit" class="login-btn">Login</button>
-
-          <p id="login-error" class="error-text" style="display:none;">
-            Invalid email or password.
-          </p>
-
-          <p class="signup-text">Don’t have access? <a href="#">Request Access</a></p>
-        </form>
-      </div>
-
-      <!-- Right: Tic Tac Toe Game -->
-      <div class="game-section">
-        <h3>Tic Tac Toe</h3>
-        <div class="game-mode">
-          <label>
-            <input type="radio" name="mode" value="single" checked> Single Player
-          </label>
-          <label>
-            <input type="radio" name="mode" value="double"> Two Players
-          </label>
         </div>
-        <div class="board" id="ticTacToeBoard">
-          <div class="cell" data-index="0"></div>
-          <div class="cell" data-index="1"></div>
-          <div class="cell" data-index="2"></div>
-          <div class="cell" data-index="3"></div>
-          <div class="cell" data-index="4"></div>
-          <div class="cell" data-index="5"></div>
-          <div class="cell" data-index="6"></div>
-          <div class="cell" data-index="7"></div>
-          <div class="cell" data-index="8"></div>
-        </div>
-        <p class="game-status" id="gameStatus"></p>
-        <button id="resetGame" class="reset-btn">Reset Game</button>
-      </div>
-    </div>
-  </section>
+      </section>
 
-  <!-- ===== FOOTER ===== -->
-  <footer class="main-footer">
-    <p>&copy; 2025 Judicial Portal | All Rights Reserved</p>
-  </footer>
+      <!-- ===== FOOTER ===== -->
+      <footer class="main-footer">
+        <p>&copy; 2025 Judicial Portal | All Rights Reserved</p>
+      </footer>
 
-  <!-- ⚠️ Check these paths match your project structure -->
-  <script src="./Javascript/script.js"></script> <!-- or your existing script.js -->
-  <script src="./Javascript/admin-game.js"></script> <!-- for Tic Tac Toe -->
-  <script src="./Javascript/admin-auth.js"></script> <!-- for login -->
+      <!-- ⚠️ Check these paths match your project structure -->
+      <script src="./Javascript/script.js"></script> <!-- or your existing script.js -->
+      <script src="./Javascript/admin-game.js"></script> <!-- for Tic Tac Toe -->
+      <script src="./Javascript/admin-auth.js"></script> <!-- for login -->
 </body>
 
 </html>
