adding blog section

--- a/Judicial Solutions/index.html
+++ b/Judicial Solutions/index.html
@@ -23,7 +23,8 @@
                 <li>|</li>
                 <li><a href="judiciary-team.html">Team</a></li>
                 <li>|</li>
-                <!-- <li><a href="/admin-login" class="login-link">Admin Login</a></li> -->
+                <li><a href="blog.html">Blog</a></li>
+                <li>|</li>
                 <li><a href="admin-login.html" class="login-link">
                     Admin Login
                 </a></li>
@@ -32,9 +33,6 @@
         <!-- Hamburger button -->
         <button class="hamburger" id="hamburger">☰</button>
     </header>
-
-
-
 
     <!-- Hero Section -->
     <header class="hero">
@@ -49,44 +47,6 @@
     </header>
 
     <!-- About Section -->
-    <!-- <section id="services" class="services-section">
-  <div class="container text-center">
-    <h2 class="section-title">Our Services</h2>
-    <div class="services-grid">
-
-      <a href="civil-cases.html" class="service-card">
-        <div class="icon">⚖️</div>
-        <h3>Civil Cases</h3>
-        <p>Expert legal guidance for property, contracts, and civil disputes.</p>
-      </a>
-
-      <div class="service-card">
-        <div class="icon">🛡️</div>
-        <h3>Criminal Defense</h3>
-        <p>Strong representation for criminal cases ensuring fair justice.</p>
-      </div>
-
-      <div class="service-card">
-        <div class="icon">👨‍👩‍👧</div>
-        <h3>Family Disputes</h3>
-        <p>Resolving family conflicts with compassion and legal clarity.</p>
-      </div>
-
-      <div class="service-card">
-        <div class="icon">🏢</div>
-        <h3>Corporate Law</h3>
-        <p>Trusted advice for businesses, compliance, and legal contracts.</p>
-      </div>
-
-      <div class="service-card">
-        <div class="icon">📑</div>
-        <h3>Legal Documentation</h3>
-        <p>Accurate and secure documentation services for all legal needs.</p>
-      </div>
-
-    </div>
-  </div>
-</section> -->
     <section id="services" class="services-section">
         <div class="container text-center">
             <h2 class="section-title">Our Services</h2>
