minor design fixes in admin login and index page

--- a/Judicial Solutions/admin-login.html
+++ b/Judicial Solutions/admin-login.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Login | Judicial Portal</title>
-  <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body class="admin-page">
@@ -35,7 +35,7 @@
           <div class="login-section">
             <h2>Admin Login</h2>
 
-            <p class="text-muted" style="margin-bottom: 20px;">
+            <p class="text-muted">
               Secure access via Amazon Cognito.
             </p>
 
