--- a/Judicial Solutions/index.html
+++ b/Judicial Solutions/index.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JudicialSolutions.in</title>
     <link rel="stylesheet" href="CSS/style.css">
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FEBGVFRBDT"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-FEBGVFRBDT');
+    </script>
 </head>
 
 <body>
