fix adding index page link and mobile view fix

--- a/Judicial Solutions/civil-cases.html
+++ b/Judicial Solutions/civil-cases.html
@@ -10,7 +10,9 @@
 <body>
   <!-- Header -->
   <header class="site-header">
-    <div class="logo">⚖️ Judicial Solutions</div>
+    <a href="index.html" class="logo">
+        ⚖️ Judicial Solutions
+        </a>
 
     <!-- Navbar -->
     <nav class="navbar" id="navbar">
