--- a/Judicial Solutions/legal-documentation.html
+++ b/Judicial Solutions/legal-documentation.html
@@ -10,7 +10,9 @@
 
   <!-- Header -->
   <header class="site-header">
-    <div class="logo">⚖️ Judicial Solutions</div>
+    <a href="index.html" class="logo">
+        ⚖️ Judicial Solutions
+        </a>
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
