--- a/Judicial Solutions/index.html
+++ b/Judicial Solutions/index.html
@@ -12,7 +12,9 @@
 
     <!-- Header -->
     <header class="site-header">
-        <div class="logo">⚖️ Judicial Solutions</div>
+        <a href="index.html" class="logo">
+        ⚖️ Judicial Solutions
+        </a>
         <nav class="navbar" id="navbar">
             <ul>
                 <li><a href="#about">About</a></li>
