--- a/Judicial Solutions/admin-dashboard.html
+++ b/Judicial Solutions/admin-dashboard.html
@@ -258,7 +258,7 @@
             </nav>
 
             <!-- Main Content -->
-            <main class="container-fluid py-4">
+            <main class="container-fluid py-4 px-0">
 
                 <!-- ============ Dashboard Section ============ -->
                 <section id="dashboard-section" class="admin-section">
